--- a/index.html
+++ b/index.html
@@ -1,198 +1,246 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#0b1020">
-<link rel="manifest" href="manifest.json">
-<title>Bomber Zueira Arena PRO</title>
+<title>Bomber Zueira Arena</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#0b1020;color:white;text-align:center;overflow:hidden}
-.hidden{display:none}
-h1{color:#4ade80;text-shadow:0 0 10px #4ade80}
-button{padding:10px 18px;margin:6px;border:none;border-radius:8px;background:#22c55e;color:white;cursor:pointer}
-canvas{background:#1e293b;border:3px solid #22c55e;margin-top:10px;max-width:95vw;height:auto}
+body{
+    margin:0;
+    background:#0f0f0f;
+    overflow:hidden;
+    font-family:Arial,Helvetica,sans-serif;
+    text-align:center;
+    color:white;
+}
+canvas{
+    background:#1a1a1a;
+    display:block;
+    margin:0 auto;
+    border:4px solid #00ffcc;
+}
+#ui{
+    position:absolute;
+    top:10px;
+    width:100%;
+    font-size:18px;
+}
 </style>
 </head>
-
 <body>
 
-<h1>🔥 Bomber Zueira Arena PRO 🔥</h1>
-
-<div id="menu">
-<button onclick="startGame()">🎮 Jogar</button>
+<div id="ui">
+    Player 1 (WASD + F) 🔵 | Player 2 (Setas + Enter) 🔴
 </div>
 
-<div id="game" class="hidden">
-<h3>
-P1 ❤️ <span id="life1">3</span> |
-P2 ❤️ <span id="life2">3</span>
-</h3>
-<canvas id="canvas" width="700" height="500"></canvas><br>
-<button onclick="exitGame()">Sair</button>
-</div>
+<canvas id="game" width="640" height="640"></canvas>
 
 <script>
-if ('serviceWorker' in navigator) {
- navigator.serviceWorker.register('service-worker.js');
-}
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-const canvas=document.getElementById("canvas");
-const ctx=canvas.getContext("2d");
+const tile = 40;
+const rows = 16;
+const cols = 16;
 
-let keys={},running=false;
-let bombs=[],explosions=[],powers=[];
-
-let p1={x:100,y:100,size:25,speed:2,life:3,shield:false};
-let p2={x:500,y:350,size:25,speed:2,life:3,shield:false};
-
+let keys = {};
 document.addEventListener("keydown",e=>keys[e.key]=true);
 document.addEventListener("keyup",e=>keys[e.key]=false);
 
-function startGame(){
- document.getElementById("menu").classList.add("hidden");
- document.getElementById("game").classList.remove("hidden");
- running=true;
- spawnPower();
- loop();
+class Player{
+    constructor(x,y,color,controls){
+        this.x=x;
+        this.y=y;
+        this.size=30;
+        this.speed=3;
+        this.color=color;
+        this.controls=controls;
+        this.alive=true;
+    }
+    move(){
+        if(!this.alive)return;
+
+        let nx=this.x;
+        let ny=this.y;
+
+        if(keys[this.controls.up])ny-=this.speed;
+        if(keys[this.controls.down])ny+=this.speed;
+        if(keys[this.controls.left])nx-=this.speed;
+        if(keys[this.controls.right])nx+=this.speed;
+
+        if(!collide(nx,this.y))this.x=nx;
+        if(!collide(this.x,ny))this.y=ny;
+
+        if(keys[this.controls.bomb]){
+            placeBomb(this);
+            keys[this.controls.bomb]=false;
+        }
+    }
+    draw(){
+        if(!this.alive)return;
+        ctx.fillStyle=this.color;
+        ctx.beginPath();
+        ctx.arc(this.x+15,this.y+15,15,0,Math.PI*2);
+        ctx.fill();
+    }
 }
 
-function exitGame(){
- running=false;
- location.reload();
+class Bomb{
+    constructor(x,y){
+        this.x=x;
+        this.y=y;
+        this.timer=120;
+    }
+    update(){
+        this.timer--;
+        if(this.timer<=0)explode(this);
+    }
+    draw(){
+        ctx.fillStyle="black";
+        ctx.beginPath();
+        ctx.arc(this.x+20,this.y+20,15,0,Math.PI*2);
+        ctx.fill();
+    }
 }
 
-function spawnPower(){
- let types=["speed","shield","bomb"];
- powers.push({
-   x:Math.random()*650,
-   y:Math.random()*450,
-   type:types[Math.floor(Math.random()*types.length)]
- });
+class Explosion{
+    constructor(x,y){
+        this.x=x;
+        this.y=y;
+        this.timer=30;
+    }
+    update(){this.timer--;}
+    draw(){
+        ctx.fillStyle="orange";
+        ctx.fillRect(this.x,this.y,tile,tile);
+    }
 }
 
-function movePlayers(){
+let map=[];
+let bombs=[];
+let explosions=[];
 
- // PLAYER 1 - WASD
- if(keys["w"]) p1.y-=p1.speed;
- if(keys["s"]) p1.y+=p1.speed;
- if(keys["a"]) p1.x-=p1.speed;
- if(keys["d"]) p1.x+=p1.speed;
-
- // PLAYER 2 - SETAS
- if(keys["ArrowUp"]) p2.y-=p2.speed;
- if(keys["ArrowDown"]) p2.y+=p2.speed;
- if(keys["ArrowLeft"]) p2.x-=p2.speed;
- if(keys["ArrowRight"]) p2.x+=p2.speed;
-
- // Bombas
- if(keys["f"]) placeBomb(p1);
- if(keys["Enter"]) placeBomb(p2);
+function generateMap(){
+    for(let r=0;r<rows;r++){
+        map[r]=[];
+        for(let c=0;c<cols;c++){
+            if(r%2===1 && c%2===1){
+                map[r][c]=1;
+            }else if(Math.random()<0.25){
+                map[r][c]=2;
+            }else{
+                map[r][c]=0;
+            }
+        }
+    }
+    map[0][0]=0; map[0][1]=0; map[1][0]=0;
+    map[15][15]=0; map[14][15]=0; map[15][14]=0;
 }
 
-function placeBomb(player){
- bombs.push({x:player.x,y:player.y,t:60,owner:player});
+function drawMap(){
+    for(let r=0;r<rows;r++){
+        for(let c=0;c<cols;c++){
+            if(map[r][c]===1){
+                ctx.fillStyle="#555";
+                ctx.fillRect(c*tile,r*tile,tile,tile);
+            }
+            if(map[r][c]===2){
+                ctx.fillStyle="#964B00";
+                ctx.fillRect(c*tile,r*tile,tile,tile);
+            }
+        }
+    }
 }
 
-function updateBombs(){
- bombs.forEach(b=>b.t--);
- bombs.forEach(b=>{
-   if(b.t===0){
-     explosions.push({x:b.x,y:b.y,t:30});
-   }
- });
- bombs=bombs.filter(b=>b.t>0);
+function collide(x,y){
+    let left=Math.floor(x/tile);
+    let right=Math.floor((x+30)/tile);
+    let top=Math.floor(y/tile);
+    let bottom=Math.floor((y+30)/tile);
 
- explosions.forEach(e=>e.t--);
- explosions=explosions.filter(e=>e.t>0);
+    if(map[top]?.[left]>0)return true;
+    if(map[top]?.[right]>0)return true;
+    if(map[bottom]?.[left]>0)return true;
+    if(map[bottom]?.[right]>0)return true;
+
+    return false;
 }
 
-function collisions(){
-
- explosions.forEach(e=>{
-
-   [p1,p2].forEach(player=>{
-     let d=Math.hypot(player.x-e.x,player.y-e.y);
-     if(d<60 && !player.shield){
-       player.life--;
-       player.x=Math.random()*600;
-       player.y=Math.random()*400;
-     }
-   });
-
- });
-
- powers.forEach(p=>{
-   [p1,p2].forEach(player=>{
-     let d=Math.hypot(player.x-p.x,player.y-p.y);
-     if(d<30){
-       if(p.type==="speed") player.speed+=0.5;
-       if(p.type==="shield") player.shield=true;
-       if(p.type==="bomb") placeBomb(player);
-       p.collected=true;
-     }
-   });
- });
-
- powers=powers.filter(p=>!p.collected);
-
- if(p1.life<=0 || p2.life<=0){
-   running=false;
-   alert("Fim de Jogo!");
-   location.reload();
- }
-
- document.getElementById("life1").innerText=p1.life;
- document.getElementById("life2").innerText=p2.life;
+function placeBomb(p){
+    let gx=Math.floor(p.x/tile)*tile;
+    let gy=Math.floor(p.y/tile)*tile;
+    bombs.push(new Bomb(gx,gy));
 }
 
-function draw(){
+function explode(bomb){
+    bombs=bombs.filter(b=>b!==bomb);
 
- ctx.clearRect(0,0,canvas.width,canvas.height);
+    const dirs=[[0,0],[1,0],[-1,0],[0,1],[0,-1]];
 
- // Player 1
- ctx.fillStyle=p1.shield?"#60a5fa":"#4ade80";
- ctx.fillRect(p1.x,p1.y,p1.size,p1.size);
+    dirs.forEach(d=>{
+        let x=bomb.x+d[0]*tile;
+        let y=bomb.y+d[1]*tile;
 
- // Player 2
- ctx.fillStyle=p2.shield?"#60a5fa":"#f87171";
- ctx.fillRect(p2.x,p2.y,p2.size,p2.size);
+        explosions.push(new Explosion(x,y));
 
- // Bombas
- ctx.fillStyle="#fde047";
- bombs.forEach(b=>{
-   ctx.beginPath();
-   ctx.arc(b.x+12,b.y+12,10,0,Math.PI*2);
-   ctx.fill();
- });
+        let r=y/tile;
+        let c=x/tile;
 
- // Explosões
- ctx.fillStyle="orange";
- explosions.forEach(e=>{
-   ctx.beginPath();
-   ctx.arc(e.x+12,e.y+12,50,0,Math.PI*2);
-   ctx.fill();
- });
+        if(map[r] && map[r][c]===2)map[r][c]=0;
 
- // Powers
- powers.forEach(p=>{
-   if(p.type==="speed") ctx.fillStyle="#22d3ee";
-   if(p.type==="shield") ctx.fillStyle="#a78bfa";
-   if(p.type==="bomb") ctx.fillStyle="#f97316";
-   ctx.fillRect(p.x,p.y,18,18);
- });
+        damage(x,y);
+    });
 }
+
+function damage(x,y){
+    [p1,p2].forEach(p=>{
+        if(p.alive &&
+           p.x<x+tile &&
+           p.x+30>x &&
+           p.y<y+tile &&
+           p.y+30>y){
+            p.alive=false;
+        }
+    });
+}
+
+let p1=new Player(0,0,"cyan",
+    {up:"w",down:"s",left:"a",right:"d",bomb:"f"}
+);
+let p2=new Player(600,600,"red",
+    {up:"ArrowUp",down:"ArrowDown",
+     left:"ArrowLeft",right:"ArrowRight",
+     bomb:"Enter"}
+);
+
+generateMap();
 
 function loop(){
- if(!running) return;
- movePlayers();
- updateBombs();
- collisions();
- draw();
- requestAnimationFrame(loop);
-}
-</script>
+    ctx.clearRect(0,0,640,640);
 
+    drawMap();
+
+    p1.move();
+    p2.move();
+
+    p1.draw();
+    p2.draw();
+
+    bombs.forEach(b=>{b.update();b.draw();});
+    explosions.forEach(e=>{e.update();e.draw();});
+    explosions=explosions.filter(e=>e.timer>0);
+
+    if(!p1.alive || !p2.alive){
+        ctx.fillStyle="white";
+        ctx.font="40px Arial";
+        ctx.fillText("FIM DE JOGO",170,320);
+    }
+
+    requestAnimationFrame(loop);
+}
+
+loop();
+</script>
 </body>
 </html>
